--- a/public/css/my-css.css
+++ b/public/css/my-css.css
@@ -1,8 +1,13 @@
+
 .table-lurus{
 text-align: center;
 }
 .tr{
     font-size: 90px;
+}
+.table-title th{
+    background: rgb(96, 106, 236);
+    color: white;
 }
 .mymodal-text{
     font-size: 20px;
@@ -31,3 +36,14 @@ text-align: center;
 .coba {
     width: -40%;
 }
+.card-content{
+    background: rgb(248, 248, 248);
+    box-shadow: 3px 0 10px rgb(139, 136, 136);
+}
+.section-header{
+    box-shadow: 1px 2px 12px rgb(146, 140, 140) !important;
+}
+.background{
+    background: #ececec
+}
+
